Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.


* ospkg's fork of pkgcore has been folded in; FEATURES=save-deb is the primary
  addition.

* extended atom syntax now allows '*' to be used w/in a string- for example
  dev-*kde, *dev-*k*de*, etc.  This syntax is usable in user configs, and
  from the commandline.

* new FEATURES=fixlafiles is on by default; basically folds
  dev-util/lafilefixer functionality directly into the merger.
  Note this version drops comments- it's about a 66% reduction in .la system
  filespace requirements via doing so.

* triggers base class now carries a ConfigHint to provide a typename.  If
  a specific trigger cannot be specified by configuration directly, set
  pkgcore_config_type = None to disable the hint removing it from being
  directly configurable.

  For users: this means basically all triggers are now directly usable in
  configuration.

* object inspection for configuration can now handle object.__init__ for
  config 'class' targets; no need to define an intermediate function.

* ConfigHints can now specify authorative=True to disable all introspection.
  Mainly usedful for cpy objects, although useful if you want to limit what
  the introspection exposes.

* api's for installing pkgs has changed; now to install a pkg to a domain,
  you invoke domain.(install|uininstall|remove)_pkg.  To just modify a repo,
  access it's operations for the appropriate operation.

* pkgcore.interfaces was moved to pkgcore.operations

* pkgcore.package.base derived objects no longer default to _get_attr dict
  lookup- if you want it, set __getattr__ = dynamic_attr_dict.

* USE is now locked an intersection of the pkgs IUSE, with forced flags
  (things like arch, userland, prefix, etc) added on.  Mild speed up from
  dealing with a reduced set, more importantly portage switched to controlled
  USE here, so we can force it finally.
