@@ -4,6 +4,9 @@ Pkgcore Release Notes
 See ChangeLog for full commit logs; this is summarized/major changes.
 
 
+* FEATURES=allow-missing-manifests ; does exactly as it sounds, not advised to
+  use unless you know what you're doing.
+
 * ospkg's fork of pkgcore has been folded in; FEATURES=save-deb is the primary
   addition.
 
